fix: fix spinner element not showing

--- a/frontend/src/presentation/components/dashboard-components/sider/sider-styles.scss
+++ b/frontend/src/presentation/components/dashboard-components/sider/sider-styles.scss
@@ -18,6 +18,7 @@
       display: flex;
       gap: 15px;
       padding-left: 24px;
+      transition: color 500ms ease, box-shadow .1s linear;
 
       p {
         color: $primary;
