--- a/frontend/src/presentation/pages/dashboard/dashboard-styles.scss
+++ b/frontend/src/presentation/pages/dashboard/dashboard-styles.scss
@@ -87,7 +87,7 @@
           justify-self: right;
           line-height: 16px;
           padding: 8px 30px;
-          transition: box-shadow .1s linear,min-width .3s cubic-bezier(0.4,0,0.2,1);
+          transition: box-shadow .1s linear;
       
           &:hover {
             background: $primaryLight;
