--- a/frontend/src/presentation/styles/global.scss
+++ b/frontend/src/presentation/styles/global.scss
@@ -27,20 +27,27 @@ button {
   background: $primary;
   border: none;
   border-radius: 8px;
+  box-shadow: 0 1px 2px 0 #0000, 0 1px 3px 1px #0000;
   color: $white;
+  cursor: pointer;
   font-size: 16px;
   line-height: 40px;
-  transition: all 500ms ease;
+  transition: color 500ms ease, box-shadow .1s linear;
 
   &:hover {
     opacity: 0.9;
+    box-shadow: 0 1px 2px -1px #3b3e4194, 0 1px 3px 1px #3c40437d;
   }
   &:disabled {
     background: $lightGray;
     color: $disabledColor;
     &:hover {
       opacity: 1;
+      box-shadow: none;
     }
   }
 
+  &:active {
+    box-shadow: 0 1px 2px 0 #0000, 0 1px 3px 1px #0000;
+  }
 }
